# DuoDecoding

./: .gitignore  .gitmodules  LICENSE  README.md  adaptiveexp.py  auto_train_manager.py  auto_train_manager_adaptive.py  calculate_consistency.py  docs.md  download.sh  exp.py  exp_cee_cuhlm_threshold_scan.py  exp_cee_sd_controlled_topk_scan.py  experiment_results_table.md  generate_table.ipynb  main.py  model_gpu_internal_docs.md  monitor_convergence.py  plot.ipynb  plot_acceptance_rates.ipynb  plot_confidence.ipynb  plot_specdec_pp_acc.ipynb  plot_threshold_analysis.ipynb  plot_thresholds_20260117.ipynb  plot_training_results.ipynb  plot_walltime_composition.ipynb  pyproject.toml  requirements.txt  rewrite_model_gpu.py  run_exp.py  scheduled_train.py  specdecpp-acc-heads-README.md  table_generator_ver2.ipynb  test.py  update_kvcache.py  verify_draft_sequence_usage.md
checkpoints/: readme.md  rl_adapter.pth  rl_adapter.pth.buffer  rl_adapter_little.pth  rl_adapter_little.pth.buffer  rl_adapter_little_best.pth.buffer  rl_adapter_main.pth  rl_adapter_main.pth.buffer  rl_adapter_main_best.pth.buffer
checkpoints_llama/: rl_adapter_little.pth  rl_adapter_little.pth.buffer  rl_adapter_main.pth  rl_adapter_main.pth.buffer
cmds/: baseline_llama.sh  baseline_vicuna.sh  duodec_llama.sh  duodec_vicuna.sh  exp.sh  expriment.sh  sd_qual_test.sh  test.sh  train_rl.sh  train_rl_mixed.sh  tri_qual_exp.sh
data/: summarization.jsonl  translation.jsonl
docs/: MULTI_GPU_LOADING.md  baselines.md  communication.md  docs.md  finalize_verification_usage.md  rl_agent_checkpoints.md
eval/: collect_confidence.py  eval.py  eval_cnndm.py  eval_gsm8k.py  eval_humaneval.py  eval_mixed.py  eval_mt_bench.py  eval_mt_bench_noeval.py  eval_mt_bench_test.py  eval_specbench.py  eval_xsum.py  few_shot_examples.py  mt_bench_acceval.py  test.py  utils.py
notebooks/: analyze_cee_sd_control.ipynb  analyze_semantics_impact.ipynb  plot_acceptance_rates.ipynb  plot_specdec_pp_acc.ipynb  plot_thresholds_20260117.ipynb  plot_throughput_vs_bandwidth.ipynb  plot_topk_bandwidth.ipynb  (+3 more)
(+102 files in other folders)
