[project]
name = "duodecoding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "click>=8.3.1",
    "dataset>=1.6.2",
    "datasets>=4.5.0",
    "einops>=0.8.1",
    "fastchat>=0.1.0",
    "google>=3.0.0",
    "huggingface-hub>=0.36.0",
    "ipdb>=0.13.13",
    "joblib>=1.5.3",
    "logger>=1.4",
    "matplotlib>=3.10.8",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "protobuf>=6.33.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pynvml>=13.0.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "rouge-score>=0.1.2",
    "safetensors>=0.7.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "shortuuid>=1.0.13",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.6",
    "typer>=0.21.1",
]
